<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/graph_task_test1"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case1" />

            <Button
                android:id="@+id/graph_task_test2"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case2" />

            <Button
                android:id="@+id/graph_task_test3"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case3" />

            <Button
                android:id="@+id/graph_task_test4"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case4" />

            <Button
                android:id="@+id/graph_task_test5"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case5" />

            <Button
                android:id="@+id/graph_task_test6"
                style="@style/Style_Margin16_Padding8"
                android:text="@string/app_graph_task_test_case6" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>