<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_test_login_sdk"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_text"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_username_text"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1" />

            <TextView
                android:id="@+id/username"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/username_text"
                app:layout_constraintLeft_toRightOf="@id/username_text"
                app:layout_constraintTop_toTopOf="@id/username_text"
                tools:text="aprz512" />

            <TextView
                android:id="@+id/user_id_text"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_user_id_text"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_text" />

            <TextView
                android:id="@+id/user_id"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/user_id_text"
                app:layout_constraintLeft_toRightOf="@id/user_id_text"
                app:layout_constraintTop_toTopOf="@id/user_id_text"
                tools:text="9527" />

            <Button
                android:id="@+id/login"
                style="@style/Style_Margin16_Padding8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_watch_user_info_after_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>